--- a/src/DrawingTrees/DrawingTrees.fsproj
+++ b/src/DrawingTrees/DrawingTrees.fsproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="TreeDesigner.fs" />
+    <Compile Include="TreeDesignerChecks.fs" />
     <Compile Include="TreeRenderer.fs" />
+    <Compile Include="TreeRendererChecks.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
