started adding support for config

--- a/src/DrawingTrees/DrawingTrees.fsproj
+++ b/src/DrawingTrees/DrawingTrees.fsproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Config.fs" />
     <Compile Include="TreeDesigner.fs" />
     <Compile Include="TreeDesignerChecks.fs" />
     <Compile Include="TreeRenderer.fs" />
@@ -12,6 +13,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FsCheck" Version="2.16.5" />
+    <PackageReference Include="FSharp.Configuration" Version="2.0.0" />
     <PackageReference Include="Plotly.Net" Version="4.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
 </Project>
