Creates TreeExamples module

--- a/src/DrawingTrees/DrawingTrees.fsproj
+++ b/src/DrawingTrees/DrawingTrees.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="TreeDesignerChecks.fs" />
     <Compile Include="TreeRenderer.fs" />
     <Compile Include="TreeRendererChecks.fs" />
+    <Compile Include="TreeExamples.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
