--- a/src/DrawingTrees/DrawingTrees.fsproj
+++ b/src/DrawingTrees/DrawingTrees.fsproj
@@ -4,8 +4,10 @@
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="StringF.fs" />
     <Compile Include="TreeDesigner.fs" />
     <Compile Include="TreeDesignerChecks.fs" />
+    <Compile Include="Renderer.fs" />
     <Compile Include="TreeRenderer.fs" />
     <Compile Include="TreeRendererChecks.fs" />
     <Compile Include="TreeExamples.fs" />
