added window size config

--- a/src/DrawingTrees/Config.yml
+++ b/src/DrawingTrees/Config.yml
@@ -5,3 +5,5 @@ Renderer:
   VerticalSpacing: 1.0 # Vertical spacing between nodes
   MaxLinesLabel: 2 # Maximum number of lines for labels
   Margin: 20.0 # Specifies drawing margin as a percentage of the horizontal and vertical ranges
+  Width: 800 # Drawing window width
+  Height: 800 # Drawing window height
