renamed drawing modes

--- a/src/DrawingTrees/Config.yml
+++ b/src/DrawingTrees/Config.yml
@@ -1,7 +1,7 @@
 Designer:
   HorizontalSpacing: 1.0 # Minimum spacing between nodes on a same level
 Renderer:
-  Mode: Plain # Drqwing mode (Plain / Alternative)
+  Mode: Angled # Drqwing mode (Angled / Direct)
   VerticalSpacing: 1.0 # Vertical spacing between nodes
   MaxLinesLabel: 1 # Maximum number of lines for labels
   Margin: 20.0 # Specifies drawing margin as a percentage of the horizontal and vertical ranges
